Modificando estrutura dos arquivos

--- a/_config.yml
+++ b/_config.yml
@@ -6,22 +6,23 @@ output: web
 topnav_title: Jekyll Documentation Theme
 # this appears on the top navigation bar next to the home button
 
-site_title: Jekyll theme for documentation
+site_title: AcessoPédia
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: Your company
+company_name: AcessoPédia
 # this appears in the footer
 
-github_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
+github_editme_path: acessopedia/acessopedia.github.io/
+ #tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-disqus_shortname: idratherbewriting
+#disqus_shortname: idratherbewriting
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
-google_analytics: UA-66296557-1
+google_analytics: UA-149874650-1
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
 
 host: 127.0.0.1
@@ -36,9 +37,9 @@ exclude:
   - vendor
 # these are the files and directories that jekyll will exclude from the build
 
-feedback_subject_line: Jekyll documentation theme
+feedback_subject_line: AcessoPédia - HUB Comunitário
 
-feedback_email: tomjoht@gmail.com
+feedback_email: acessopedia@gmail.com
 # used as a contact email for the Feedback link in the top navigation bar
 
 # feedback_disable: true
@@ -74,7 +75,7 @@ defaults:
       type: "pages"
     values:
       layout: "page"
-      comments: true
+      comments: false
       search: true
       sidebar: home_sidebar
       topnav: topnav
@@ -84,7 +85,7 @@ defaults:
       type: "tooltips"
     values:
       layout: "page"
-      comments: true
+      comments: false
       search: true
       tooltip: true
 
@@ -94,7 +95,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true
+      comments: false
       search: true
       sidebar: home_sidebar
       topnav: topnav
@@ -103,17 +104,17 @@ defaults:
 
 sidebars:
 - home_sidebar
-- mydoc_sidebar
-- product1_sidebar
-- product2_sidebar
-- other
+#- mydoc_sidebar
+#- product1_sidebar
+#- product2_sidebar
+#- other
 
-description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
+description: "Este é um repositório para facilitar o agrupamento de artigos e informações de referência no mundo de desenvolvimento e tecnologia. O propósito é criar um hub de informações comunitárias de iniciantes à avançados."
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
-# url: http://idratherbewriting.com
-# baseurl: /documentation-theme-jekyll
+url: http://acessopedia.github.io
+baseurl: /documentation-theme-jekyll
 
 
 github: [metadata]
